<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#673AB7"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/btnBack"
            style="@style/backButton"
            app:tint="@color/white"
            android:src="@drawable/baseline_arrow_back_24"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/appHeader"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/about2"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/appInfo1"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="15dp"
            android:layout_marginHorizontal="40dp"
            android:src="@drawable/catsi_logo_l" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/appInfo2"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:layout_marginTop="8dp"
            android:text="@string/appInfo3"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/follow"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Space style="@style/spacer" />

            <ImageView
                android:id="@+id/web"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/web" />

            <Space style="@style/spacer" />

            <ImageView
                android:id="@+id/fb"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/fb" />

            <Space style="@style/spacer" />

            <ImageView
                android:id="@+id/insta"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/insta" />

            <Space style="@style/spacer" />

            <ImageView
                android:id="@+id/tg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/tg" />

            <Space style="@style/spacer" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
