<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@drawable/bg_bottom_nav"
    android:backgroundTint="#FBF7F7"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:text="@string/change_account_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:background="#F8E2E2" />


    <EditText
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginVertical="8dp"
        android:backgroundTint="#F8E2E2"
        android:hint="@string/name"
        android:textColor="@color/black"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="16sp"
        tools:ignore="LabelFor" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginEnd="8dp"
            app:cornerRadius="8dp"
            android:backgroundTint="#673AB7"
            android:layout_weight="1"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>