<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#673AB7"
    android:layout_height="match_parent">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_user"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="42dp"
        app:shapeAppearanceOverlay="@style/ShapeImageViewCircle" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="@id/img_user"
        app:layout_constraintStart_toStartOf="@id/img_user"
        app:layout_constraintTop_toBottomOf="@id/img_user" />


    <LinearLayout
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:padding="4dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name"
        app:layout_constraintVertical_bias="0.2">

        <TextView
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account" />

         <TextView
            android:id="@+id/tv_change_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="?selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/change_account_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_user" />

        <TextView
            android:id="@+id/tv_change_image_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="?selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/change_image"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_camera" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginVertical="8dp"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="?selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/baseline_language_24" />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="?selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/infooo"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/baseline_info_24"/>



        <TextView
            android:id="@+id/tv_support_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="?selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/support_us"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_like" />

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="?selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/share"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_next"
            app:tint="@color/white"
            app:drawableStartCompat="@drawable/baseline_share_24" />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>