<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#673AB7"
    android:layout_height="match_parent">





    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="26dp"
        android:layout_marginHorizontal="16dp"
        android:clickable="false"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/field1"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_margin="12dp">


            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtHumidity"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"
                android:textSize="24dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/txt1"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/txtHumidity"/>


            <SeekBar
                app:layout_constraintTop_toBottomOf="@id/txtHumidity"
                android:layout_marginTop="18dp"
                android:id="@+id/seek1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="30000"
                android:min="10000" />


            <com.airbnb.lottie.LottieAnimationView
                android:layout_gravity="center"
                android:id="@+id/image_logo2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:padding="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="humidity.json"
                app:lottie_loop="true" />



        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/t2"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="12dp"
        android:clickable="false"
        app:layout_constraintTop_toBottomOf="@id/t1"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/field2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">


            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTemperature"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"
                android:textSize="24dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/txt2"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/txtTemperature"/>

            <SeekBar
                app:layout_constraintTop_toBottomOf="@id/txtTemperature"
                android:layout_marginTop="18dp"
                android:id="@+id/seek2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:max="37200"
                android:min="26100"
                android:progress="0"
                app:tint="@color/white" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_gravity="center"
                android:id="@+id/image_logo3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:padding="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="temp.json"
                app:lottie_loop="true" />


        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/t3"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="12dp"
        android:clickable="false"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/t2"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/field3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">


            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtStep"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"
               android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24dp"
                app:layout_constraintTop_toBottomOf="@id/txt3"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/txtStep_count"/>

            <SeekBar
                app:layout_constraintTop_toBottomOf="@id/txtStep_count"
                android:layout_marginTop="18dp"
                android:id="@+id/seek3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:max="200000"
                android:min="0"
                android:progress="0"
                app:tint="@color/white" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_gravity="center"
                android:id="@+id/image_logo4"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:padding="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="step.json"
                app:lottie_loop="true" />


        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.cardview.widget.CardView>




    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="22dp"
        android:textColor="@color/black"
        android:layout_marginBottom="22dp"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        android:id="@+id/btnScoreStress"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/verfied_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="33dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"
        tools:visibility="visible" />





</androidx.constraintlayout.widget.ConstraintLayout>